more lab progress